// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiveSiteReviewsListItem component will render with all review properties set 1`] = `
"<li class="flex gap-4 items-center">
  <figure class="flex flex-col items-center min-w-36"><label class="font-bold">Rating</label>
    <div readonly="">3.33</div><label class="font-bold">Difficulty</label>
    <div class="min-w-20 relative group">
      <div class="flex items-baseline gap-1">
        <div class="grow rounded-full bg-grey-600 h-1.5 mb-4">
          <div class="rounded-full h-1.5 bg-secondary" style="width: 17.6%;"></div>
        </div><span>0.9</span>
      </div>
      <div class="invisible group-hover:visible text-pretty text-sm italic shadow-md shadow-grey-700/60 absolute top-[80%] -left-4 z-[50] p-1 rounded-md bg-secondary text-grey-800 min-w-32">Easy-peasy, suitable for all divers</div>
    </div>
  </figure>
  <article class="grow space-y-3">
    <div class="flex flex-col gap-3 grow">
      <div class="flex flex-col md:flex-row items-baseline gap-3">
        <div class="rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[32px] w-fit shadow-inner shadow-grey-800"><span class="relative"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=Sam%20Smith"><!--v-if--></span><span class="pr-2 font-bold text-sm">Sam Smith</span></div>
        <p class="text-sm">4 years ago</p>
      </div>
      <p class="italic text-pretty">This is a test review.</p>
    </div>
  </article>
  <!--v-if-->
</li>"
`;

exports[`DiveSiteReviewsListItem component will render with only required review properties set 1`] = `
"<li class="flex gap-4 items-center">
  <figure class="flex flex-col items-center min-w-36"><label class="font-bold">Rating</label>
    <div readonly="">3.33</div><label class="font-bold">Difficulty</label><span>Not rated</span>
  </figure>
  <article class="grow space-y-3">
    <div class="flex flex-col gap-3 grow">
      <div class="flex flex-col md:flex-row items-baseline gap-3">
        <div class="rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[32px] w-fit shadow-inner shadow-grey-800"><span class="relative"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=Sam%20Smith"><!--v-if--></span><span class="pr-2 font-bold text-sm">Sam Smith</span></div>
        <p class="text-sm">4 years ago</p>
      </div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
</li>"
`;
